# PatentsDown

./: .gitignore  PatentsDown.spec  README.md  convert_ico.py  downloader.py  extractor.py  generate_icon.py  main.py  pack.py  pyproject.toml  requirements.txt  shell_menu.py  test_driver.py  test_mock.py
docs/: release_notes_v3.0.md  release_notes_v3.1.md
scripts/: make_icon.py
